unpackaged/main/default/objects/Object_Kill_Switch__c/Object_Kill_Switch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Per-object kill switches. Add a Disable_[ObjectName]__c checkbox field for each object that has automations. When checked, all automations for that object are disabled.</description>
    <label>Object Kill Switch</label>
</CustomObject>