unpackaged/main/default/objects/Object_Kill_Switch__c/fields/Disable_Account__c.field-meta.xml
<CustomField>
    <fullName>Disable_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all automations on Account.</description>
    <inlineHelpText>Check to disable all Account automations.</inlineHelpText>
    <label>Disable Account</label>
    <type>Checkbox</type>
</CustomField>