unpackaged/main/default/objects/Object_Kill_Switch__c/fields/Disable_Case__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all automations on Case.</description>
    <inlineHelpText>Check to disable all Case automations.</inlineHelpText>
    <label>Disable Case</label>
    <type>Checkbox</type>
</CustomField>