unpackaged/main/default/objects/Object_Kill_Switch__c/fields/Disable_Contact__c.field-meta.xml
<CustomField>
    <fullName>Disable_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all automations on Contact.</description>
    <inlineHelpText>Check to disable all Contact automations.</inlineHelpText>
    <label>Disable Contact</label>
    <type>Checkbox</type>
</CustomField>