unpackaged/main/default/objects/Object_Kill_Switch__c/fields/Disable_Course_Offering_Participant__c.field-meta.xml
<CustomField>
    <fullName>Disable_Course_Offering_Participant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this setting to turn off automation on course offering participants</description>
    <label>Disable Course Offering Participant</label>
    <type>Checkbox</type>
</CustomField>