unpackaged/main/default/objects/Object_Kill_Switch__c/fields/Disable_Lead__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all automations on Lead.</description>
    <inlineHelpText>Check to disable all Lead automations.</inlineHelpText>
    <label>Disable Lead</label>
    <type>Checkbox</type>
</CustomField>