unpackaged/main/default/objects/Object_Kill_Switch__c/fields/Disable_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables all automations on Opportunity.</description>
    <inlineHelpText>Check to disable all Opportunity automations.</inlineHelpText>
    <label>Disable Opportunity</label>
    <type>Checkbox</type>
</CustomField>